vscode is trasparent

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -29,6 +29,9 @@
 	focus-exclude = [
 		"class_g ?= 'dmenu'",
 	];
+	opacity-rule = [
+	  "50:class_g = 'Code'"
+	];
 ### Opacity }
 
 ### General Settings }
