--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -34,6 +34,15 @@
 	];
 ### Opacity }
 
+blur-background = true;
+blur-background-frame = true;
+blur-background-fixed = true;
+blur:
+{
+	method = "dual_kawase";
+	strength = 100;
+};
+
 ### General Settings }
 	backend = "glx";
 	daemon = false;
